[tool.poetry]
name = "tests-ecosia-and-todomvc"
version = "0.1.0"
description = ""
authors = ["nasteek <nasteek.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "^2.*", allow-prereleases = true}
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
